# squishy-converter

./: .gitignore  Dockerfile  MANUAL.md  README.md  docker-compose-jellyfin.yml  docker-compose.dev.yml  docker-compose.yaml  entrypoint.sh  pyproject.toml  requisitos-sistema.txt  run.py
.github/workflows/: docker-publish.yml
Especificacoes_Nebula/: 1_visao_geral.md  2_requisitos_tecnicos.md  3_funcionalidades.md  4_layout_e_rotas.md  5_lista_de_tarefas.md  PROMPT_PARA_LLM.md
config/: squishy.db
docs_backup/: implementation_plan.md  task.md  walkthrough.md
squishy/: app.py  config.py  library_manager.py  models.py  scanner.py  scheduler.py  transcoder.py  user.py
squishy/blueprints/: admin.py  api.py  auth.py  library.py  ui.py
squishy/effeffmpeg/: effeffmpeg.py
squishy/static/css/: squishy.css
squishy/static/js/: batch.js
squishy/templates/: base.html  library_report.html  login.html
squishy/templates/admin/: index.html
squishy/templates/ui/: media_detail.html  settings_auth.html  show_detail.html
squishy/translations/pt_BR/LC_MESSAGES/: messages.mo  messages.po
